# TrayTracker_ROS2

./: .gitattributes  .gitignore  LICENSE  README.md  global_requirements.txt  launcher.sh  packages.list
ROS2_Ab_C++/ros2_ws/src/ros2_penny_constructor/: CMakeLists.txt  package.xml
ROS2_Ab_C++/ros2_ws/src/ros2_penny_constructor/src/: penny_constructor.cpp
ROS2_Ab_OPCUA/: OPC_tray_tracker_test_0.py  ROS2_Ab_OPCUA_venv_requirements.txt
ROS2_Ab_OPCUA/ros2_ws/src/ros2_opcua/: package.xml  setup.cfg  setup.py
ROS2_Ab_OPCUA/ros2_ws/src/ros2_opcua/ros2_opcua/: penny_grid_opcua.py
ROS2_Ab_YOLO/ros2_ws/: check_pt.py  open_cv_test.py
ROS2_Ab_YOLO/ros2_ws/src/ros2_tracking/: package.xml  setup.cfg  setup.py
ROS2_Ab_YOLO/ros2_ws/src/ros2_tracking/ros2_tracking/: yolo_tracking.py
ROS2_Sarath18_OpenCV/ros2_ws/src/ros2_opencv/: package.xml  setup.py
ROS2_Sarath18_OpenCV/ros2_ws/src/ros2_opencv/ros2_opencv/: cameraPublisher.py  subscriberImage.py  subscriberImage_2.py  subscriberImage_3.py  webcam.py
ROS2_marcos-moura97_Flask/ros2_ws/src/video_stream_ros2/: setup.py
ROS2_marcos-moura97_Flask/ros2_ws/src/video_stream_ros2/video_stream_ros2/: app.py  app_2.py  app_3.py
ROS2_marcos-moura97_Flask/ros2_ws/src/video_stream_ros2/video_stream_ros2/templates/: index.html  index2.html  index3.html
ROS2_xovobobo_RTSP/ros2_ws/src/image2rtsp/config/: parameters.yaml
